RESOLVED FIXED261834
[Cocoa] MSE video playback disappears after system interruption until pause/play
https://bugs.webkit.org/show_bug.cgi?id=261834
Summary [Cocoa] MSE video playback disappears after system interruption until pause/play
Jer Noble
Reported 2023-09-20 11:41:54 PDT
[Cocoa] MSE video playback disappears after system interruption until pause/play
Attachments
Jer Noble
Comment 1 2023-09-20 11:42:26 PDT
Jer Noble
Comment 2 2023-09-20 11:47:16 PDT
EWS
Comment 3 2023-09-21 16:29:20 PDT
Committed 268283@main (7149a1fcc02e): <https://commits.webkit.org/268283@main> Reviewed commits have been landed. Closing PR #17985 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.