Cherry-pick 7149a1fcc02e. rdar://113647070

[Cocoa] MSE video playback disappears after system interruption until pause/play
    https://bugs.webkit.org/show_bug.cgi?id=261834
    rdar://113647070

    Reviewed by Tim Horton and Dean Jackson.

    On some Cocoa platforms, the system will interrupt AVSampleBufferDisplayLayer rendering
    when the process is backgrounded until a flush operation. This is detectable on iOS through
    a specific error code, but API has been added for this purpose as well. Detect this state
    and, when the page again becomes visible, flush visible AVSBDLs and re-enqueue with video
    samples.

    Flushing the display layer has the paradoxical effect of pausing playback, as a display
    layer without a decoded sample will usually prevent playback from starting. In the case
    where we are re-enqueuing due to visibility change, note the reason for the flush in the
    MediaPlayerPrivate and do not pause playback in that case.

    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::playInternal):
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::setPageIsVisible):
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::shouldBePlaying const):
    (WebCore::MediaPlayerPrivateMediaSourceAVFObjC::effectiveRateChanged):
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.mm:
    (WebCore::MediaSourcePrivateAVFObjC::flushActiveSourceBuffersIfNeeded):
    * Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.h:
    * Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
    (-[WebAVSampleBufferErrorListener beginObservingLayer:]):
    (-[WebAVSampleBufferErrorListener layerRequiresFlushToResumeDecodingChanged:]):
    (WebCore::SourceBufferPrivateAVFObjC::flushIfNeeded):
    (WebCore::SourceBufferPrivateAVFObjC::layerRequiresFlushToResumeDecodingChanged):
    (WebCore::SourceBufferPrivateAVFObjC::isReadyForMoreSamples):

    Canonical link: https://commits.webkit.org/268283@main
Identifier: 265423.1041@safari-7616-branch